feat: get endpoint & meta based post
